# padle-game-analysis

./: .gitignore  AGENTS.md  README.md  corrected-plan.md  mvp-implementation-plan.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.cuda  devcontainer.cuda.json  devcontainer.json  post-create.sh
.devcontainer/cuda/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/rocm/: Dockerfile  devcontainer.json
configs/: bytetrack.yaml  default.yaml
docs/: initial-plan.md  mvp-architecture.drawio  mvp-description.md  mvp_description.md  pipeline.drawio
scripts/: evaluate_ball_tracking.py  evaluate_calibration.py  evaluate_tracking.py  extract_frames.py  run_mvp.py  train_ball_tracker.py  train_scoreboard_detector.py
src/: logging_config.py  schemas.py
src/analytics/: __init__.py  heatmap.py  kinematics.py  metrics.py  zones.py
src/ball_tracking/: __init__.py  ball_processor.py  detector.py  events.py  kalman_tracker.py  metrics.py  tracker.py  wasb_sbdt.py
src/calibration/: __init__.py  court_registration.py  frame_sampler.py  line_detection.py  line_filtering.py  template_fitting.py
src/config/: __init__.py  loader.py
src/coordinates/: __init__.py  projection.py  smoothing.py
src/detection/: __init__.py  player_detector.py  player_processor.py  roi_filter.py
src/export/: __init__.py  video_writer.py  writer.py
src/scoreboard/: __init__.py  fsm.py  ocr_engine.py  parser.py  roi_detector.py  scoreboard.py  scoreboard_processor.py  vlm_detector.py
src/tracking/: __init__.py  bytetrack.py  identity.py  tracker.py
src/video_io/: __init__.py  reader.py  single_pass.py
src/visualization/: __init__.py  dashboard.py  minimap.py  overlay.py
tasks/: todo.md
tests/: test_analytics.py  test_ball_tracking.py  test_calibration.py  test_config.py  test_detection.py  test_export.py  test_logging_config.py  test_schemas.py  test_scoreboard.py  test_tracking.py
