[project]
name = "padel-cv"
version = "0.1.0"
description = "Padel game analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "torch",
    "torchvision",
    "torchaudio",
    "torchaudio",
    "ultralytics",
    "pydantic",
    "pyyaml",
    "click",
    "loguru",
    "pandas",
    "deeplsd @ git+https://github.com/cvg/DeepLSD.git",
    "omegaconf",
    "scikit-image",
    "pytlsd",
    "paddlepaddle==3.3.1",
    "paddleocr==3.5.0",
]

[project.scripts]
padel-cv = "src.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
